--- a/todoapp/templates/todoapp/task_list.html
+++ b/todoapp/templates/todoapp/task_list.html
@@ -1,4 +1,5 @@
 <h1>Todoリスト</h1>
+<a href="{% url 'create-task' %}">新規タスク追加</a>
 <table>
     <tr>
         <th>タスク</th>
@@ -7,6 +8,8 @@
         <tr>
             <td>{{task.title}}</td>
             <td><a href="{% url 'task' task.id %}">確認</a></td>
+            <td><a href="{% url 'edit-task' task.id %}">編集</a></td>
+            <td><a href="{% url 'delete-task' task.id %}">削除</a></td>
         </tr>
     {% endfor %}
 </table>
