ログインユーザーの取得

--- a/todoapp/templates/todoapp/task_list.html
+++ b/todoapp/templates/todoapp/task_list.html
@@ -1,3 +1,7 @@
+{% if request.user.is_authenticated %}
+<p>ログインユーザー：{{request.user}}</p>
+{% endif %}
+
 <h1>Todoリスト</h1>
 <a href="{% url 'create-task' %}">新規タスク追加</a>
 <table>
