--- a/todoapp/templates/todoapp/login.html
+++ b/todoapp/templates/todoapp/login.html
@@ -4,3 +4,5 @@
     {% csrf_token %} {{form.as_p}}
     <input type="submit" value="ログイン">
 </form>
+<p>アカウントを作成↓</p>
+<a href="{% url 'register' %}">新規登録</a>
