--- a/todoapp/templates/todoapp/task_list.html
+++ b/todoapp/templates/todoapp/task_list.html
@@ -10,6 +10,11 @@
 
 <h1>Todoリスト</h1>
 <a href="{% url 'create-task' %}">新規タスク追加</a>
+
+<form method="GET">
+    <input type="text" name="search" value="{{search}}">
+    <input type="submit" value="検索">
+</form>
 <table>
     <tr>
         <th>タスク</th>
