--- a/todoapp/templates/todoapp/login.html
+++ b/todoapp/templates/todoapp/login.html
@@ -1,3 +1,7 @@
+{% extends 'todoapp/base.html' %}
+
+{% block content %}
+
 <h1>ログイン</h1>
 
 <form action="" method="POST">
@@ -6,3 +10,5 @@
 </form>
 <p>アカウントを作成↓</p>
 <a href="{% url 'register' %}">新規登録</a>
+
+{% endblock content %}
