--- a/todoapp/templates/todoapp/task_confirm_delete.html
+++ b/todoapp/templates/todoapp/task_confirm_delete.html
@@ -1,6 +1,11 @@
+{% extends 'todoapp/base.html' %}
+
+{% block content %}
+
 <a href="{% url 'tasks' %}">タスク一覧</a>
 <form method="POST">
     {% csrf_token %}
     <p>{{task}} を本当に削除しますか</p>
     <input type="submit" value="削除"/>
 </form>
+{% endblock content %}
