--- a/todoapp/templates/todoapp/task_form.html
+++ b/todoapp/templates/todoapp/task_form.html
@@ -1,3 +1,7 @@
+{% extends 'todoapp/base.html' %}
+
+{% block content %}
+
 <h2>タスクの追加</h2>
 <a href="{% url 'tasks' %}">タスク一覧</a>
 
@@ -5,3 +9,4 @@
     {% csrf_token %} {{ form.as_p }}
     <input type="submit" value="追加" />
 </form>
+{% endblock content %}
