--- a/todoapp/templates/todoapp/base.html
+++ b/todoapp/templates/todoapp/base.html
@@ -6,10 +6,12 @@
     <title>
         Todoアプリ
     </title>
+<link href="https://fonts.googleapis.com/css?family=M+PLUS+1p" rel="stylesheet">
 </head>
 <style>
     body {
-        background-color: red;
+        background-color:rgb(179, 255, 230);
+        font-family: "M PLUS 1p";
     }
 </style>
 <body>
