--- a/todoapp/templates/todoapp/base.html
+++ b/todoapp/templates/todoapp/base.html
@@ -10,8 +10,24 @@
 </head>
 <style>
     body {
-        background-color:rgb(179, 255, 230);
+        background-color:rgb(220, 236, 236);
         font-family: "M PLUS 1p";
+        padding-top: 55px;
+    }
+
+    .todoAppWrapper {
+        max-width: 530px;
+        margin: 0 auto;
+        background-color: rgb(210, 250, 255);
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5); /* 影を広げる */
+        border-radius: 10px;
+        padding: 1%;
+    }
+
+    a {
+        color: #595959;
+        text-decoration: none;
+
     }
 </style>
 <body>
