--- a/todoapp/templates/todoapp/base.html
+++ b/todoapp/templates/todoapp/base.html
@@ -1,35 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
         Todoアプリ
     </title>
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
 <link href="https://fonts.googleapis.com/css?family=M+PLUS+1p" rel="stylesheet">
 </head>
-<style>
-    body {
-        background-color:rgb(220, 236, 236);
-        font-family: "M PLUS 1p";
-        padding-top: 55px;
-    }
-
-    .todoAppWrapper {
-        max-width: 530px;
-        margin: 0 auto;
-        background-color: rgb(210, 250, 255);
-        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5); /* 影を広げる */
-        border-radius: 10px;
-        padding: 1%;
-    }
-
-    a {
-        color: #595959;
-        text-decoration: none;
-
-    }
-</style>
 <body>
     <div class="todoAppWrapper">{% block content %} {% endblock content %}</div>
 </body>
