--- a/todoapp/templates/todoapp/task_list.html
+++ b/todoapp/templates/todoapp/task_list.html
@@ -1,36 +1,74 @@
 {% extends 'todoapp/base.html' %}
 
 {% block content %}
-<h1>Todoリスト</h1>
-<a href="{% url 'create-task' %}">新規タスク追加</a>
+  <div class="header">
+    <h1>{{ request.user }}のタスク</h1>
+  </div>
 
-<form method="GET">
-    <input type="text" name="search" value="{{search}}">
-    <input type="submit" value="検索">
-</form>
-<table>
+  {% comment %} <h1>Todoリスト</h1>
+  <a href="{% url 'create-task' %}">新規タスク追加</a>
+
+  <form method="GET">
+    <input type="text" name="search" value="{{ search }}" />
+    <input type="submit" value="検索" />
+  </form> {% endcomment %}
+  {% comment %} <table>
     <tr>
-        <th>タスク</th>
+      <th>タスク</th>
     </tr>
     {% for task in tasks %}
-        <tr>
-            <td>{{task.title}}</td>
-            <td><a href="{% url 'task' task.id %}">確認</a></td>
-            <td><a href="{% url 'edit-task' task.id %}">編集</a></td>
-            <td><a href="{% url 'delete-task' task.id %}">削除</a></td>
-        </tr>
+      <tr>
+        <td>{{ task.title }}</td>
+        <td>
+          <a href="{% url 'task' task.id %}">確認</a>
+        </td>
+        <td>
+          <a href="{% url 'edit-task' task.id %}">編集</a>
+        </td>
+        <td>
+          <a href="{% url 'delete-task' task.id %}">削除</a>
+        </td>
+      </tr>
     {% endfor %}
-</table>
-<div class="loginAndLogout">
-    {% if request.user.is_authenticated %}
-    <p>ログインユーザー：{{request.user}}</p>
-    <form action="{% url 'logout' %}" method="POST", name="f_logout">
-        {% csrf_token %}
-        <input type="submit" value="ログアウト">
-    </form>
-    {% else %}
-    <a href="{% url 'login' %}">ログイン</a>
-{% endif %}
-</div>
+  </table> {% endcomment %}
 
-{% endblock content %}
+  <div class="tasksWrapper">
+    {% for task in tasks %}
+      <div class="taskWrapper">
+        {% comment %}タスク完了している場合{% endcomment %}
+        {% if task.completed %}
+          <div class="taskTitle">
+            <div class="taskCompletedIcon"></div>
+            <s><a href="{% url 'task' task.id %}">{{ task }}</a></s>
+          </div>
+          <div>
+            <a href="{% url 'edit-task' task.id %}" class="editButton">&#x1f4dd;</a>
+          <a href="{% url 'delete-task' task.id %}" class="deleteButton">X</a>
+        </div>
+        {% else %}
+          {% comment %}タスクが未完了の場合{% endcomment %}
+          <div class="taskTitle">
+            <div class="taskInCompletedIcon"></div>
+            <a href="{% url 'task' task.id %}">{{ task }}</a>
+          </div>
+          <div>
+            <a href="{% url 'edit-task' task.id %}" class="editButton">&#x1f4dd;</a>
+          <a href="{% url 'delete-task' task.id %}" class="deleteButton">X</a>
+        </div>
+        {% endif %}
+      </div>
+    {% endfor %}
+  </div>
+
+  <div class="loginAndLogout">
+    {% if request.user.is_authenticated %}
+      {% comment %} <p>ログインユーザー：{{ request.user }}</p> {% endcomment %}
+      <form action="{% url 'logout' %}" method="POST" name="f_logout">
+        {% csrf_token %}
+        <input type="submit" value="ログアウト" />
+      </form>
+    {% else %}
+      <a href="{% url 'login' %}">ログイン</a>
+    {% endif %}
+  </div>
+{% endblock %}
